--- a/aks/http-svc/svc.yaml
+++ b/aks/http-svc/svc.yaml
@@ -2,10 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: http-svc
+  namespace: teaching-ns
 spec:
   selector:
     app: http-svc
   ports:
     - protocol: TCP
-      port: 80
+      port: 8080
       targetPort: 8080
