--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,7 +7,8 @@ build-backend = "setuptools.build_meta"
 dependencies = [
     "psycopg[binary]",
     "fastapi",
-    "uvicorn"
+    "uvicorn",
+    "python-dateutil"
     ]
 name = "teach-that-api"
 version = "0.0.1"
